<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:orderInCategory="3"
        android:title="@string/dial_settings3"
        app:showAsAction="never" />
    <item
        android:orderInCategory="4"
        android:title="@string/dial_settings4"
        app:showAsAction="never" />
    <item
        android:orderInCategory="5"
        android:title="@string/dial_settings5"
        app:showAsAction="never" />
    <item
        android:orderInCategory="6"
        android:title="@string/dial_settings6"
        app:showAsAction="never" />
    <item
        android:orderInCategory="7"
        android:title="@string/dial_settings7"
        app:showAsAction="never" />
    <item
        android:orderInCategory="8"
        android:title="@string/dial_settings8"
        app:showAsAction="never" />
    <item
        android:orderInCategory="9"
        android:title="@string/dial_settings9"
        app:showAsAction="never" />
</menu>